--- a/layouts/default.html
+++ b/layouts/default.html
@@ -30,7 +30,7 @@
         <div id="title">
           <h1>header test</h1>
           <hr>
-          <div class="desc"><a href=https://discord.gg/K8FTX7YN8w>discord.gg/K8FTX7YN8w</a></div>
+          <div class="desc"></div>
 <!--           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span> -->
         </div>
 
